--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
       - run: sudo apt install -y software-properties-common apt-utils curl zip git libxml2 libxml2-dev
       - run: sudo apt update
       - run: sudo docker-php-ext-install zip
+      - run: composer self-update --1
 
       # Download and cache dependencies
       - restore_cache:
