Renamed inotify script, added the script to bindir

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         }
     },
     "bin" : [
-        "bin/certbot.php"
+        "bin/certbot.php",
+        "bin/certbot-inotifywait.sh"
     ]
 }
